# PhoenixCodingAcademy

./: .gitignore  README.md  StartWebServer.bat  UpdateIndex.bat  UpdateIndex.sh  cspell.json  dev-cursor.bat  dev.bat  index.txt  main.py  pyproject.toml  requirements.txt  test_markdown.py
data/: ai.yaml  git.yaml  julia.yaml  llm.yaml  logic.yaml  networks.yaml  python.yaml  school.yaml  tensorflow.yaml
data/assets/: graphs.vsdx
data/questions/: Computer Networking.yaml  Computer Science History.yaml  Data Science - General and Technology Agnostic.yaml  History - 20th Century (Senior High School).yaml  History - Basic Colonial America and the Revolution.yaml  Neural Networks.yaml  Python Programming.yaml  README.md  SQL - Basic and Technology Agnostic.yaml  Sample.yaml  Statistics - Basic.yaml  _template.yaml  llms.yaml
pages/: AcademicWriting.md  Architecture.md  AssemblyLanguage.md  ClubHistory.md  Cosmac Elf.md  Discord.md  DocumentationSystems.md  Gherkin.md  Git.md  GitCommands.md  GitHubPages.md  GitWorkflow.md  Graphs.md  IPO.md  Latex.md  LatexMath.md  ML.md  Markdown.md  MediaWiki.md  Membership.md  MembershipProcess.md  PCA.md  QuestionsSPS.md  QuickStart.md  Quiz.md  RaspberrPiZero2.md  ReinforcementLearning.md  _AI.md  _EmphasizedSubjects.md  _SoftwareEngineering.md  _Tensors.md  _Vectors.md  ham.md
pages/Artificial Intelligence/: Today 2025-11.md  ai-club.md  ai-glossary.md  ai-server1.md  llm-companies.md  llm-glossary.md  llm-glossary.md.bak  llm-models.md  models.md
projects/: Index.py  index.txt  requirements.txt
reports/: quizlog.yaml
(+50 files in other folders)
