[project]
name = "phoenixcodingacademy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.5"
dependencies = [
    "flask>=3.1.0",
    "huggingface-hub>=1.2.1",
    "jaro-winkler>=2.0.3",
    "json5>=0.10.0",
    "markdown>=3.7",
    "pyyaml>=6.0.2",
    "watchdog>=6.0.0",
]
